add discover :hover

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@ cursor: true
     </div>
     <div class="discover tr-750 js-discover">
         <div class="a a-fi-up-small a-del-500">
-            <div class="discover__txt">{{ site.data.home.intro.discover }}</div>
-            <div class="discover__line"></div>
+            <div class="discover__container">
+                <div class="discover__txt">{{ site.data.home.intro.discover }}</div>
+                <div class="discover__line"></div>
+            </div>
         </div>
     </div>
 </section>
