--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ header: header--white
 <section class="section">
     <div class="container container--s">
         <header class="about__header a a-fi">
-            <h1 class="about__title">
+            <h1 class="courses__title">
                 oeps!
             </h1>
         </header>
