update responsive scss

--- a/404.html
+++ b/404.html
@@ -12,8 +12,8 @@ header: header--white
             </h1>
         </header>
         <div class="about__content a a-fi a-del-250">
-            <h2 class="f24 f36-sm">pagina niet gevonden...</h2>
-            <p class="f18-sm mb-4">error code: 404</p>
+            <h2 class="f24 f36@m">pagina niet gevonden...</h2>
+            <p class="f18@m mb-4">error code: 404</p>
             <a href="/cursussen" class="button">bekijk cursussen</a>
         </div>
     </div>
