--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,8 @@ google-maps: true
 <div class="contact a a-fi-left">
     <div class="contact__container">
         <h1 class="contact__title">{{ site.data.contact.company }}</h1>
-        <p class="f14 f18-sm f-grey-5 mb-2">{{ site.data.contact.location }}</p>
-        <ul class="f20-sm">
+        <p class="f14 f18@m f-grey-5 mb-2">{{ site.data.contact.location }}</p>
+        <ul class="f20@m">
             <li class="dib">
                 <a href="mailto:{{ site.data.contact.email }}" class="contact__link">
                     {{ site.data.contact.email }}
