--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ cursor: true
     <div class="intro__bg a a-fi"></div>
     <div class="container intro__container">
         <header class="intro__header a a-fi">
-            <h1 class="f36 f48-sm f80-md lh-title mb-4 fw-900">
+            <h1 class="f36 f48@m f80@l lh-title mb-4 fw-900">
                 {{ site.data.home.intro.title }}
             </h1>
             <p class="section-header__description">
@@ -34,8 +34,8 @@ cursor: true
 <section class="art">
     <div class="container container--m">
         <div class="art__grid">
-            <header class="section-header order-last-md js-scroll">
-                <div class="thick-line hidden-xs hidden-sm tr-stag js-tr"></div>
+            <header class="section-header order-last@l js-scroll">
+                <div class="thick-line hidden-until@m tr-stag js-tr"></div>
                 <h2 class="section-header__title section-header__title--small mxw-550 tr-stag js-tr">
                     {{ site.data.home.art.title }}
                 </h2>
@@ -55,7 +55,7 @@ cursor: true
     <div class="pattern__bg"></div>
     <div class="container pattern__container">
         <header class="section-header">
-            <h2 class="f32 f48-sm f72-md lh-title mb-4 fw-900 tr-stag js-tr">
+            <h2 class="f32 f48@m f72@l lh-title mb-4 fw-900 tr-stag js-tr">
                 {{ site.data.home.pattern.title }}
             </h2>
             <p class="section-header__description mxw-500 mb-6 tr-stag js-tr">
@@ -74,7 +74,7 @@ cursor: true
     <div class="container container--m">
         <div class="proof__grid">
             <header class="section-header mxw-350 js-scroll">
-                <div class="thick-line hidden-xs hidden-sm tr-stag js-tr"></div>
+                <div class="thick-line hidden-until@m tr-stag js-tr"></div>
                 <h2 class="section-header__title section-header__title--small tr-stag js-tr">
                     {{ site.data.home.proof.title }}
                 </h2>
