--- a/bedankt.html
+++ b/bedankt.html
@@ -11,7 +11,7 @@ title: bedankt voor je inschrijving | ziris
                 Bedankt voor je inschrijving <span class="js-get-data" id="firstname"></span>!
             </h1>
         </header>
-        <p class="f20 f24-sm f-grey-4 a a-fi a-del-250">
+        <p class="f20 f24@m f-grey-4 a a-fi a-del-250">
             Ik ga het in orde maken. Je ontvangt een bevestigingmail op
             <span class="f-brand fw-900 js-get-data" id="email"></span>.
             Het kan zijn dat deze mail in je spambox terecht komt.
