--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@ cursor: true
 ---
 
 <section class="intro">
-    <div class="intro__bg a a-fi"></div>
+    <div class="intro__bg"></div>
     <div class="container intro__container">
-        <header class="intro__header a a-fi a-dur-1000 a-del-350">
+        <header class="mxw-700 txt-r@xxl">
             <h1 class="f36 f48@m f80@l lh-title mb-4 fw-900">
                 {{ site.data.home.intro.title }}
             </h1>
-            <p class="section-header__description">
-                {{ site.data.home.intro.subtitle }}
-            </p>
         </header>
     </div>
     <div class="intro__img-container">
         <figure class="o-hidden">
-            <img class="intro__img a a-fi-left-o100 a-dur-1200 a-del-800" src="{{ site.data.home.intro.img }}" alt="{{ site.data.home.intro.caption }}" />
-            <figcaption class="intro__figcaption a a-fi a-del-1600">{{ site.data.home.intro.caption }}</figcaption>
+            <img class="intro__img" src="{{ site.data.home.intro.img }}" alt="{{ site.data.home.intro.caption }}" />
+            <figcaption class="intro__figcaption">{{ site.data.home.intro.caption }}</figcaption>
         </figure>
     </div>
     <div class="discover tr-750 js-discover">
