add simple css animations to intro

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ cursor: true
 ---
 
 <section class="intro">
-    <div class="intro__bg"></div>
+    <div class="intro__bg a a-fi a-del-500"></div>
     <div class="container intro__container">
         <header class="mxw-700 txt-r@xxl">
             <h1 class="f36 f48@m f80@l lh-title mb-4 fw-900">
@@ -14,12 +14,12 @@ cursor: true
     </div>
     <div class="intro__img-container">
         <figure class="o-hidden">
-            <img class="intro__img" src="{{ site.data.home.intro.img }}" alt="{{ site.data.home.intro.caption }}" />
-            <figcaption class="intro__figcaption">{{ site.data.home.intro.caption }}</figcaption>
+            <img class="intro__img a a-fi" src="{{ site.data.home.intro.img }}" alt="{{ site.data.home.intro.caption }}" />
+            <figcaption class="intro__figcaption a a-fi a-del-250">{{ site.data.home.intro.caption }}</figcaption>
         </figure>
     </div>
     <div class="discover tr-750 js-discover">
-        <div class="a a-fi-up-small a-del-1500">
+        <div class="a a-fi-up-small a-del-1000">
             <div class="discover__container">
                 <div class="discover__txt">{{ site.data.home.intro.discover }}</div>
                 <div class="discover__line"></div>
