--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 ---
 body: bg-brand
 cursor: true
+header-animation: a-del-900
 ---
 
 <section class="intro js-intro">
     <div class="intro__bg v-hidden js-intro-bg"></div>
     <div class="container intro__container">
-        <header class="mxw-700 txt-r@xxl v-hidden js-intro-txt">
-            <h1 class="f36 f48@m f80@l lh-title mb-4 fw-900">
+        <header class="mxw-700 txt-r@xl v-hidden js-intro-txt">
+            <h1 class="intro__title">
                 {{ site.data.home.intro.title }}
             </h1>
         </header>
-    </div>
-    <div class="intro__img-container">
-        <figure class="o-hidden">
+        <figure class="intro__figure o-hidden">
             <img class="intro__img v-hidden js-intro-img" src="{{ site.data.home.intro.img }}" alt="{{ site.data.home.intro.caption }}" />
             <figcaption class="intro__figcaption v-hidden js-intro-caption">{{ site.data.home.intro.caption }}</figcaption>
         </figure>
     </div>
     <div class="discover tr-750 js-discover">
-        <div class="a a-fi-up-small a-del-1000">
+        <div class="a a-fi-up-small a-del-1200">
             <div class="discover__container">
                 <div class="discover__txt">{{ site.data.home.intro.discover }}</div>
                 <div class="discover__line"></div>
