removed header ani exception

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 body: bg-brand
 cursor: true
-header-animation: a-del-900
 ---
 
 <section class="intro js-intro">
@@ -18,7 +17,7 @@ header-animation: a-del-900
         </figure>
     </div>
     <div class="discover tr-750 js-discover">
-        <div class="a a-fi-up-small a-del-1200">
+        <div class="a a-fi-up-small a-del-1200 a-eo">
             <div class="discover__container">
                 <div class="discover__txt">{{ site.data.home.intro.discover }}</div>
                 <div class="discover__line"></div>
