--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ cursor: true
 <section class="art">
     <div class="container container--m">
         <div class="art__grid">
-            <header class="section-header order-last@l js-scroll">
+            <header class="section-header order-last@l js-scroll js-split-text">
                 <div class="thick-line hidden-until@m tr-stag js-tr"></div>
                 <h2 class="section-header__title section-header__title--small mxw-550 tr-stag js-tr">
                     {{ site.data.home.art.title }}
