--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ cursor: true
 <section class="intro js-intro">
     <div class="intro__bg v-hidden js-intro-bg"></div>
     <div class="container intro__container">
-        <header class="mxw-700 txt-r@xl v-hidden js-intro-txt">
+        <header class="intro__header a a-fi a-dur-50 js-intro-header">
             <h1 class="intro__title">
                 {{ site.data.home.intro.title }}
             </h1>
