major update animations for rest of the pages

--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@ no-footer: true
 google-maps: true
 ---
 
-<div class="map a a-fi a-del-500">
+<div class="map a a-fi a-del-500 a-eo a-dur-1000">
     <div class="map__container" id="js-map"></div>
 </div>
 
-<div class="map__controls a a-fi-right">
+<div class="map__controls a a-fi-right a-eo a-dur-1000">
     <div class="map__zoom js-zoom-in">
         <span class="pos-r top-min-2px">+</span>
     </div>
@@ -18,7 +18,7 @@ google-maps: true
     </div>
 </div>
 
-<div class="contact a a-fi-left">
+<div class="contact a a-fi-left a-eo a-dur-1000">
     <div class="contact__container">
         <h1 class="contact__title">{{ site.data.contact.company }}</h1>
         <p class="f14 f18@m f-grey-5 mb-2">{{ site.data.contact.location }}</p>
