--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ cursor: true
 <section class="intro js-intro">
     <div class="intro__bg v-hidden js-intro-bg"></div>
     <div class="container intro__container">
-        <header class="intro__header v-hidden js-intro-header">
+        <header class="intro__header v-hidden js-scroll js-split-text" data-stag="0.03">
             <h1 class="intro__title">
                 {{ site.data.home.intro.title }}
             </h1>
