--- a/cursussen.html
+++ b/cursussen.html
@@ -5,7 +5,7 @@ title: cursussen | ziris
 
 <section class="courses">
     <div class="container container--m">
-        <h1 class="courses__title a a-fi a-dur-200 js-scroll js-split-text" data-stag="0.04">cursussen</h1>
+        <h1 class="courses__title v-hidden js-scroll js-split-text" data-stag="0.04">cursussen</h1>
     </div>
     <div class="courses__container a a-fi">
         <div class="container container--m">
