changes cursussen to aanbod

--- a/aanbod.html
+++ b/aanbod.html
@@ -5,7 +5,10 @@ title: cursussen | ziris
 
 <section class="courses">
     <div class="container container--m">
-        <h1 class="courses__title v-hidden js-scroll js-split-text" data-stag="0.04">cursussen</h1>
+        <h1 class="mb-4 mb-6@m v-hidden js-scroll js-split-text" data-stag="0.02">
+            <span class="courses__title">aanbod</span>
+            <span class="courses__subtitle">cursussen, lessen, excursies</span>
+        </h1>
     </div>
     <div class="courses__container a a-fi">
         <div class="container container--m">
