--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ cursor: true
                 </p>
             
             <div class="tr-fi js-tr js-pattern-button">
-                <a href="/cursussen" class="button button--l">
+                <a href="/aanbod" class="button button--l">
                     {{ site.data.home.pattern.button }}
                 </a>
             </div>
