update about and subtitle aanbod

--- a/aanbod.html
+++ b/aanbod.html
@@ -7,7 +7,7 @@ title: cursussen | ziris
     <div class="container container--m">
         <h1 class="mb-4 mb-6@m v-hidden js-scroll js-split-text" data-stag="0.02">
             <span class="courses__title">aanbod</span>
-            <span class="courses__subtitle">cursussen, lessen, excursies</span>
+            <span class="courses__subtitle">cursussen, workshops, lessen en excursies</span>
         </h1>
     </div>
     <div class="courses__container a a-fi">
