add redirect for /cursussen | update 404

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@ header: header--white
         <div class="about__content a a-fi a-del-250">
             <h2 class="f24 f36@m">pagina niet gevonden...</h2>
             <p class="f18@m mb-4">error code: 404</p>
-            <a href="/cursussen" class="button">bekijk cursussen</a>
+            <a href="/aanbod" class="button">bekijk aanbod</a>
         </div>
     </div>
 </section>
