--- a/inschrijven.html
+++ b/inschrijven.html
@@ -12,6 +12,8 @@ title: inschrijven | ziris
             <div class="cta__title a a-fi a-del-150 js-get-data" id="course-title">cursus</div>
         </h1>
 
+        {% include meta-table.html %}
+
         <form id="form" class="a a-fi a-del-300" name="Inschrijvingen" action="/bedankt" novalidate netlify>
             <fieldset class="signup__fieldset">
                 {% include formfield.html class='js-set-data' id='firstname' label='voornaam' type='text' required='required' %}
