--- a/bedankt.html
+++ b/bedankt.html
@@ -8,13 +8,18 @@ title: bedankt voor je inschrijving | ziris
     <div class="container container--s">
         <header class="thanks__header a a-fi">
             <h1 class="thanks__title">
-                Bedankt voor je inschrijving <span class="js-get-data" id="firstname"></span>!
+                Bedankt voor je inschrijving <span class="js-get-data" id="name"></span>!
             </h1>
         </header>
-        <p class="f20 f24@m f-grey-4 a a-fi a-del-250">
-            Ik ga het in orde maken. Je ontvangt een bevestigingmail op
-            <span class="f-brand fw-900 js-get-data" id="email"></span>.
-            Het kan zijn dat deze mail in je spambox terecht komt.
-        </p>
+        <div class="mxw-600">
+            <p class="f20 f24@m f-grey-4 mb-4 a a-fi a-del-250">
+                Ziris gaat het in orde maken. Je ontvangt een bevestigingmail op
+                <span class="f-brand fw-900 js-get-data" id="email"></span>.
+            </p>
+            <p class="f16 f-grey-4 a a-fi a-del-250">
+                Omdat Ziris je een persoonlijke bevestiging stuurt,
+                duurt het meestal iets langer dan een automatische bevestigingmail.
+            </p>
+        </div>
     </div>
 </section>
