--- a/inschrijven.html
+++ b/inschrijven.html
@@ -16,10 +16,10 @@ title: inschrijven | ziris
 
         <form id="form" class="a a-fi a-del-300" name="Inschrijvingen" action="/bedankt" novalidate netlify>
             <fieldset class="signup__fieldset">
-                {% include formfield.html class='js-set-data' id='firstname' label='voornaam' type='text' required='required' %}
-                {% include formfield.html class='js-set-data' id='lastname' label='achternaam' type='text' required='required' %}
+                {% include formfield.html class='js-set-data' id='name' label='naam' type='text' required='required' %}
                 {% include formfield.html class='js-set-data' id='phone' label='telefoonnummer' type='tel' minlength='10' required='required' %}
                 {% include formfield.html class='js-set-data' id='email' label='e-mailadres' type='email' required='required' %}
+                {% include formfield.html class='js-set-data mxw-200' id='participants' label='aantal deelnemers' type='number' value=1 %}
             </fieldset>
             <fieldset class="signup__fieldset dn">
                 {% include formfield.html class='js-get-data' id='course-title' label='cursus' type='hidden' %}
