longer input is visual nicer

--- a/inschrijven.html
+++ b/inschrijven.html
@@ -19,7 +19,7 @@ title: inschrijven | ziris
                 {% include formfield.html class='js-set-data' id='name' label='naam' type='text' required='required' %}
                 {% include formfield.html class='js-set-data' id='phone' label='telefoonnummer' type='tel' minlength='10' required='required' %}
                 {% include formfield.html class='js-set-data' id='email' label='e-mailadres' type='email' required='required' %}
-                {% include formfield.html class='js-set-data mxw-200' id='participants' label='aantal deelnemers' type='number' value=1 %}
+                {% include formfield.html class='js-set-data' id='participants' label='aantal deelnemers' type='number' value=1 %}
             </fieldset>
             <fieldset class="signup__fieldset dn">
                 {% include formfield.html class='js-get-data' id='course-title' label='cursus' type='hidden' %}
